update(backend/src): implement response documentation in auth controller
